Gray-Space/src/objects/MV_Movie__c.object
<CustomObject>
    <fields>
        <fullName>MV_Adult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MV_Aproved__c</fullName>
        <defaultValue>&apos;New&apos;</defaultValue>
        <label>Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MV_Backdrop_Path__c</fullName>
        <label>Backdrop Path</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MV_Character__c</fullName>
        <label>Character</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Homepage__c</fullName>
        <label>Homepage</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Original_Language__c</fullName>
        <label>Original Language</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Original_Title__c</fullName>
        <label>Original Title</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Overview__c</fullName>
        <label>Overview</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MV_Popularity__c</fullName>
        <label>Popularity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MV_Poster_Path__c</fullName>
        <label>Poster Path</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MV_Runtime__c</fullName>
        <label>Runtime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MV_The_Movie_DB_ID__c</fullName>
        <label>The Movie DB ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MV_Video__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MV_Vote_Average__c</fullName>
        <label>Vote Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MV_Vote_Count__c</fullName>
        <label>Vote Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MV_imdb_id__c</fullName>
        <label>imdb_id</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <label>Movie</label>
    <nameField>
        <label>Movie Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>